--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -60,7 +60,7 @@
 
       a {
         @apply transition-all ease-in-out duration-150
-        hover:text-purple-100;
+        lg:hover:text-purple-100;
       }
     }
 
