--- a/src/components/GrammarQuiz/GrammarQuiz.module.scss
+++ b/src/components/GrammarQuiz/GrammarQuiz.module.scss
@@ -38,7 +38,7 @@
 
       .btn {
         @apply text-center py-3 px-6 gap-2 pr-[14px] bg-blue-200 font-bold rounded-full text-white-100 transition-all ease-out duration-150 
-        hover:bg-purple-100 [&__svg]:hover:mr-0 hover:gap-[18px];
+        lg:hover:bg-purple-100 [&__svg]:lg:hover:mr-0 lg:hover:gap-[18px];
 
         svg {
           @apply mr-2.5 transition-all ease-out duration-150;
