--- a/src/components/ui/Modal/Modal.module.scss
+++ b/src/components/ui/Modal/Modal.module.scss
@@ -12,7 +12,7 @@
 
     svg {
       @apply transition-all ease-linear duration-150
-      hover:text-purple-100;
+      lg:hover:text-purple-100;
     }
   }
 
