--- a/src/app/[locale]/dashboard/bookmarks/BookmarksPage.module.scss
+++ b/src/app/[locale]/dashboard/bookmarks/BookmarksPage.module.scss
@@ -20,7 +20,7 @@
 
       a {
         @apply w-[130px] flex justify-center text-center py-2 px-6 items-center bg-blue-200 font-bold rounded-md text-white-100 transition-all ease-linear duration-150 cursor-pointer
-        hover:bg-purple-100;
+        lg:hover:bg-purple-100;
       }
     }
   }
