--- a/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
+++ b/src/app/[locale]/dashboard/grammar/[id]/SingleGrammar.module.scss
@@ -9,7 +9,7 @@
 
     a {
       @apply rounded bg-blue-200 py-2 px-4 font-bold text-white-100 transition-all ease-in-out duration-300 
-      hover:bg-purple-100;
+      lg:hover:bg-purple-100;
     }
   }
 
@@ -29,7 +29,7 @@
 
   a {
     @apply flex font-medium items-center justify-center bg-blue-200 text-white-100 px-3 py-1.5 rounded transition-all ease-in-out duration-300
-    hover:bg-purple-100;
+    lg:hover:bg-purple-100;
 
     svg {
       @apply mr-2;
