--- a/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
@@ -59,19 +59,19 @@
 
     a {
       @apply flex font-medium items-center justify-center bg-blue-200 text-white-100 px-3 py-1.5 rounded transition-all ease-in-out duration-300
-      hover:bg-purple-100;
+      lg:hover:bg-purple-100;
     }
   }
 }
 
 .badge {
   @apply text-sm px-2 py-1 rounded-2xl border border-blue-200 cursor-pointer transition-all ease-in-out duration-[.15s]
-  hover:bg-purple-100 hover:text-white-100 hover:border-purple-100;
+  lg:hover:bg-purple-100 lg:hover:text-white-100 lg:hover:border-purple-100;
 }
 
 .active {
   @apply text-white-100 bg-blue-200 cursor-default
-  hover:bg-blue-200 hover:text-white-100 hover:border-blue-100;
+  lg:hover:bg-blue-200 lg:hover:text-white-100 lg:hover:border-blue-100;
 }
 
 .level-title {
