--- a/src/app/[locale]/dashboard/quiz/list/[name]/collection/[id]/VocabularyQuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/list/[name]/collection/[id]/VocabularyQuizPage.module.scss
@@ -9,7 +9,7 @@
 
     a {
       @apply border border-blue-200 rounded text-blue-200 font-bold py-2 px-6 transition-all ease-linear duration-150
-      hover:border-purple-100 hover:bg-purple-100 hover:text-white-100;
+      lg:hover:border-purple-100 lg:hover:bg-purple-100 lg:hover:text-white-100;
     }
 
     button {
@@ -19,7 +19,7 @@
 
   > a {
     @apply flex font-medium items-center justify-center bg-blue-200 text-white-100 px-3 py-1.5 rounded transition-all ease-in-out duration-300
-    hover:bg-purple-100;
+    lg:hover:bg-purple-100;
   }
 }
 
@@ -38,7 +38,7 @@
 
       .link {
         @apply w-[135px] mt-2 text-center rounded px-5 py-2 self-center bg-blue-200 text-white-100 font-bold transition-all ease-linear duration-150
-        hover:bg-purple-100;
+        lg:hover:bg-purple-100;
       }
 
       button {
