--- a/src/app/[locale]/dictionary/Dictionary.module.scss
+++ b/src/app/[locale]/dictionary/Dictionary.module.scss
@@ -61,8 +61,8 @@
 .card {
   @apply bg-[#e6eaf0] h-[144px] cursor-pointer rounded-3xl text-center flex flex-col items-center justify-center gap-3 
   lg:h-[182px] 
-  [&_h2]:hover:text-purple-100 
-  hover:bg-[#E6EAF0];
+  [&_h2]:lg:hover:text-purple-100 
+  lg:hover:bg-[#E6EAF0];
 
   > div {
     @apply flex flex-col gap-3 items-center;
