--- a/src/app/[locale]/mobile-app/MobileApp.module.scss
+++ b/src/app/[locale]/mobile-app/MobileApp.module.scss
@@ -24,11 +24,11 @@
 
         a {
           @apply flex p-0 w-[188px]  
-          hover:no-underline;
+          lg:hover:no-underline;
 
           button {
             @apply w-full py-2 px-4 bg-[#F0F0F0] rounded-3xl justify-center items-center border-none h-12 flex
-            hover:bg-grey-300;
+            lg:hover:bg-grey-300;
 
             svg {
               @apply mr-2 fill-black;
@@ -206,11 +206,11 @@
           a {
             @apply hidden p-0 w-[188px] 
             sm:flex sm:mr-4  
-            hover:no-underline;
+            lg:hover:no-underline;
 
             button {
               @apply w-full py-2 px-4 bg-grey-200 rounded-3xl justify-center items-center border-none h-12 flex
-              hover:bg-grey-300;
+              lg:hover:bg-grey-300;
 
               svg {
                 @apply mr-2 fill-black;
