--- a/src/app/[locale]/notFound.module.scss
+++ b/src/app/[locale]/notFound.module.scss
@@ -15,7 +15,7 @@
 
     .link {
       @apply flex font-medium items-center justify-center bg-blue-200 text-white-100 px-3 py-1.5 rounded transition-all ease-in-out duration-300
-      hover:bg-purple-100;
+      lg:hover:bg-purple-100;
 
       svg {
         @apply mr-2;
@@ -27,7 +27,7 @@
 
       a {
         @apply underline transition-all ease-in-out duration-150 
-        hover:text-purple-100;
+        lg:hover:text-purple-100;
       }
     }
   }
