--- a/src/components/AdvantageItem/AdvantageItem.module.scss
+++ b/src/components/AdvantageItem/AdvantageItem.module.scss
@@ -1,7 +1,7 @@
 .container {
   @apply w-1/3 px-1.5 border-0 border-l-[1.5px] border-solid border-purple-100 pl-1
   xs:pl-3
-  [&_h6]:hover:text-purple-100;
+  [&_h6]:lg:hover:text-purple-100;
 
   div {
     @apply flex items-center;
