--- a/src/components/CollectionCard/CollectionCard.module.scss
+++ b/src/components/CollectionCard/CollectionCard.module.scss
@@ -49,12 +49,12 @@
 
     a {
       @apply text-black flex items-center justify-center p-3 rounded-2xl bg-[#F0F0F0] transition-all ease-in-out duration-150
-      hover:bg-purple-100 hover:text-white-100;
+      lg:hover:bg-purple-100 lg:hover:text-white-100;
     }
   }
 }
 
 .button-bookmark {
   @apply stroke-black text-black flex items-center justify-center p-2 rounded-2xl bg-[#F0F0F0] transition-all ease-in-out duration-150
-  hover:bg-purple-100 hover:text-white-100 hover:stroke-white-100 hover:fill-white-100;
+  lg:hover:bg-purple-100 lg:hover:text-white-100 lg:hover:stroke-white-100 lg:hover:fill-white-100;
 }
