--- a/src/components/FlashCardWord/FlashCardWord.module.scss
+++ b/src/components/FlashCardWord/FlashCardWord.module.scss
@@ -38,7 +38,7 @@
 
   .footer {
     @apply flex items-center justify-center w-full h-14 overflow-hidden bg-transparent z-[1] bg-blue-200 rounded-t-none rounded-b-3xl transition-all ease-in-out duration-150
-    hover:bg-purple-100;
+    lg:hover:bg-purple-100;
   }
 }
 
