--- a/src/components/QuizCard/QuizCard.module.scss
+++ b/src/components/QuizCard/QuizCard.module.scss
@@ -1,7 +1,7 @@
 .item {
   @apply flex h-full flex-col cursor-pointer text-lg bg-grey-250 p-2 rounded-lg shadow-md transition-all ease-in-out
-  hover:text-purple-100 hover:bg-grey-200
-  [&_div]:hover:text-purple-100 [&_p]:hover:text-purple-100;
+  lg:hover:text-purple-100 lg:hover:bg-grey-200
+  [&_div]:lg:hover:text-purple-100 [&_p]:lg:hover:text-purple-100;
 
   .top {
     @apply flex justify-between items-start text-blue-200;
@@ -10,7 +10,7 @@
 
 .button-bookmark {
   @apply stroke-black text-black flex items-center justify-center p-2 w-10 rounded-2xl bg-[#F0F0F0] transition-all ease-in-out duration-300
-  hover:bg-purple-100 hover:text-white-100 hover:stroke-white-100 hover:fill-white-100;
+  lg:hover:bg-purple-100 lg:hover:text-white-100 lg:hover:stroke-white-100 lg:hover:fill-white-100;
 }
 
 .active {
