--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -8,7 +8,7 @@
     li {
       a {
         @apply flex w-full items-center text-blue-200 mb-1 py-2 px-3 rounded-lg font-bold transition-all ease-linear duration-150
-        hover:bg-blue-225;
+        lg:hover:bg-blue-225;
 
         svg {
           @apply mr-2;
