--- a/src/components/TopBar/components/AddingWordForm/AddingWordForm.module.scss
+++ b/src/components/TopBar/components/AddingWordForm/AddingWordForm.module.scss
@@ -1,4 +1,4 @@
 .add {
   @apply cursor-pointer text-white-100 bg-blue-200 flex items-center justify-center p-3 rounded-2xl transition-all ease-in-out duration-150
-  hover:bg-purple-100 hover:text-white-100;
+  lg:hover:bg-purple-100 lg:hover:text-white-100;
 }
