--- a/src/components/WordDefinition/WordDefinition.module.scss
+++ b/src/components/WordDefinition/WordDefinition.module.scss
@@ -2,8 +2,8 @@
   // repeat(6,_minmax(150px,_1fr))
   @apply cursor-pointer relative grid grid-cols-[minmax(100px,_10fr)_minmax(140px,_14fr)_minmax(180px,_18fr)_minmax(100px,_10fr)_minmax(115px,_11.5fr)_minmax(135px,_13.5fr)_minmax(120px,_12fr)] w-full transition-all duration-[.3s] ease-in-out
   even:bg-white-200
-  hover:bg-purple-300
-  [&_.word-modal]:hover:visible [&_.word-modal]:hover:opacity-100;
+  lg:hover:bg-purple-300
+  [&_.word-modal]:lg:hover:visible [&_.word-modal]:lg:hover:opacity-100;
 
   > div {
     @apply border-l border-t p-1;
