Fix: Small code refactor connected to collectionGroup

--- a/src/components/CategoryItem/CategoryItem.module.scss
+++ b/src/components/CategoryItem/CategoryItem.module.scss
@@ -14,6 +14,6 @@
   @apply text-[#363884] bg-[url('../../../src/assets/adjectives.png')] bg-[#d6eef8];
 }
 
-.others {
+.other {
   @apply text-[#363884] bg-[url('../../../src/assets/others.png')] bg-[#f7d7ed];
 }
