Feat: Created Sections & lists words

--- a/src/components/PageHeading/PageHeading.module.scss
+++ b/src/components/PageHeading/PageHeading.module.scss
@@ -1,5 +1,5 @@
 .heading {
-  @apply flex justify-between gap-6 flex-col-reverse items-center mb-14 mt-12
+  @apply flex justify-between gap-6 flex-col-reverse items-center mb-14 
   sm:mb-16 
   lg:flex-row lg:mb-20;
 
