--- a/src/components/WordExamples/WordExamples.module.scss
+++ b/src/components/WordExamples/WordExamples.module.scss
@@ -2,8 +2,8 @@
   @apply bg-[#F7F9FC] relative rounded-3xl shadow-md;
 
   .examples {
-    @apply w-full px-2 py-4 
-    sm:px-4 
+    @apply w-full px-2 py-4 pt-6 
+    sm:px-4 sm:py-4
     md:px-8 md:py-6;
 
     .examples-header {
