--- a/src/app/[locale]/dictionary/[id]/DictionaryWord.module.scss
+++ b/src/app/[locale]/dictionary/[id]/DictionaryWord.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply mx-auto w-full flex flex-col justify-center gap-6 p-4 
+  @apply mx-auto w-full flex flex-col justify-center gap-6 p-4 mt-24 
   md:flex-row md:flex-wrap md:p-4
   min-[834px]:p-0 
   lg:p-3 lg:flex-nowrap;
