--- a/src/components/VocabularyQuiz/VocabularyQuiz.module.scss
+++ b/src/components/VocabularyQuiz/VocabularyQuiz.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply h-auto flex flex-col min-h-[calc(100vh-397px-73px)]
+  @apply h-auto flex flex-col min-h-[calc(100vh-201px-73px)]
   sm:min-h-[calc(100vh-193px-81px)]
   md:min-h-[calc(100vh-153px-81px)]
   lg:min-h-[calc(100vh-97px-81px)];
@@ -21,7 +21,10 @@
   }
 
   .quiz {
-    @apply flex flex-col justify-between h-full px-4 pb-4;
+    @apply flex flex-col justify-between h-auto min-h-[calc(100vh-201px-73px-56px)]
+    sm:min-h-[calc(100vh-193px-81px)]
+    md:min-h-[calc(100vh-153px-81px)]
+    lg:min-h-[calc(100vh-97px-81px)] px-4 pb-4;
 
     .answers {
       .option {
