--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply hidden px-4 py-6 h-full border-r border-grey-275 mt-20
+  @apply hidden px-4 py-6 h-[calc(100%-80px)] border-r border-grey-275 mt-20
   lg:flex lg:flex-col;
 
   > ul {
