--- a/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
+++ b/src/app/[locale]/dashboard/quiz/QuizPage.module.scss
@@ -35,7 +35,7 @@
       }
 
       .vocabulary-quiz {
-        @apply py-6 flex flex-col gap-4 bg-gradient-to-b from-white-100 to-[#f4f6f8] sm:px-4;
+        @apply py-6 px-4 flex flex-col gap-4 bg-gradient-to-b from-white-100 to-[#f4f6f8];
 
         .items {
           @apply grid gap-4 grid-cols-auto-fill-140;
