--- a/src/components/CustomCategory/CustomCategory.module.scss
+++ b/src/components/CustomCategory/CustomCategory.module.scss
@@ -9,8 +9,8 @@
     lg:block;
 
     .list-group {
-      @apply flex gap-3 overflow-x-auto
-      sm:bg-[#deede671] sm:px-4 sm:my-6 sm:pt-10 sm:pb-5 sm:rounded-2xl sm:shadow-sm sm:shadow-[#00000013]
+      @apply flex gap-3 overflow-x-auto rounded-2xl px-4 pt-4 pb-2
+      sm:bg-[#deede671] sm:px-4 sm:my-6 sm:pt-10 sm:pb-5 sm:shadow-sm sm:shadow-[#00000013]
       md:rounded-l-none md:basis-7/12 md:max-w-[calc(100%-300px)]
       lg:max-w-[calc(100vw-292px)] lg:rounded-2xl;
     }
