--- a/src/app/[locale]/dictionary/Dictionary.module.scss
+++ b/src/app/[locale]/dictionary/Dictionary.module.scss
@@ -47,7 +47,7 @@
       @apply flex;
 
       > input {
-        @apply rounded-l-3xl;
+        @apply rounded-l-3xl border-r-0 rounded-r-none;
       }
 
       > button {
