--- a/src/app/[locale]/dashboard/lists/[id]/SingleList.module.scss
+++ b/src/app/[locale]/dashboard/lists/[id]/SingleList.module.scss
@@ -64,11 +64,12 @@
               @apply grid grid-rows-[0fr] transition-all duration-500 grid-rows-[1fr];
 
               .accordion-details-container {
-                @apply flex justify-between items-center bg-[#F0F4FA] p-3 rounded-b-3xl
+                @apply flex justify-between items-center bg-[#F0F4FA] p-3 rounded-b-3xl 
                 sm:px-6 sm:py-4;
 
                 .btns {
-                  @apply flex gap-4;
+                  @apply flex mr-1.5 
+                  sm:mr-4;
 
                   .tip-btn {
                     @apply bg-transparent text-black p-0 m-0 text-xl transition-all ease-out duration-150
@@ -82,10 +83,12 @@
                 }
 
                 .info {
-                  @apply flex items-center gap-6;
+                  @apply flex items-center gap-1.5
+                  sm:gap-4;
 
                   > div {
-                    @apply flex items-center gap-4;
+                    @apply flex items-center gap-2
+                    sm:gap-4;
 
                     > div {
                       @apply flex items-center text-[#949494] gap-[6px] text-sm;
@@ -97,11 +100,14 @@
                   }
 
                   a {
-                    @apply flex justify-center items-center text-center py-2 px-6 pr-[14px] bg-blue-200 font-bold rounded-full text-white-100 transition-all ease-out duration-150 
-                    lg:hover:bg-purple-100 [&__svg]:lg:hover:mr-0 [&__svg]:lg:hover:ml-5;
+                    @apply flex justify-center items-center text-center py-2 px-3 bg-blue-200 font-bold rounded-full text-white-100 transition-all ease-out duration-150 
+                    sm:px-6 
+                    lg:pr-[14px]
+                  lg:hover:bg-purple-100 [&__svg]:lg:hover:mr-0 [&__svg]:lg:hover:ml-5;
 
                     svg {
-                      @apply mx-2.5 transition-all ease-out duration-150;
+                      @apply ml-1.5 transition-all ease-out duration-150
+                      sm:mx-2.5;
                     }
                   }
                 }
