Feat: Manage user list modal & updated logic for language modal

--- a/src/components/TopBar/TopBar.module.scss
+++ b/src/components/TopBar/TopBar.module.scss
@@ -1,5 +1,5 @@
-.container {
-  @apply flex justify-between py-3 mb-2 items-center;
+.filters-sorting {
+  @apply flex justify-between py-3 items-center;
 
   .filters {
     @apply flex items-center font-bold relative;
